--- a/index.html
+++ b/index.html
@@ -55,9 +55,9 @@
       var loaderUrl = buildUrl + "/Unity Builds.loader.js";
       var config = {
         arguments: [],
-        dataUrl: buildUrl + "/Unity Builds.data.br",
-        frameworkUrl: buildUrl + "/Unity Builds.framework.js.br",
-        codeUrl: buildUrl + "/Unity Builds.wasm.br",
+        dataUrl: buildUrl + "/Unity Builds.data.gz",
+        frameworkUrl: buildUrl + "/Unity Builds.framework.js.gz",
+        codeUrl: buildUrl + "/Unity Builds.wasm.gz",
         streamingAssetsUrl: "StreamingAssets",
         companyName: "DefaultCompany",
         productName: "FlappyBird_Mobile",
